# trade-dashboard

./: .env  .eslintrc.json  .gitignore  README.md  open-next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  wrangler.toml
notebook/: config.py  dynamodb.py  月次反省.ipynb
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(home)/: layout.tsx  page.tsx
src/app/(home)/analysis/: ResultCard.tsx  ResultGraph.tsx  page.tsx
src/app/(home)/calc/: page.tsx
src/app/(home)/component/: Button.tsx  Card.tsx  FormParts.tsx  TabBar.tsx
src/app/(home)/components/: Button.tsx  Card.tsx  FormParts.tsx  NewRecordButton.tsx  PlRecordCard.tsx  TabBar.tsx
src/app/(home)/market/: page.tsx
src/app/(home)/method/: RecordCard.tsx  page.tsx
src/app/(home)/method/[record_id]/: Form.tsx  page.tsx
src/app/(home)/record/: page.tsx
src/app/(home)/record/cf/: RecordCard.tsx  page.tsx
src/app/(home)/record/pl/: RecordCard.tsx  page.tsx
src/app/(home)/strategy/: RecordCard.tsx  page.tsx
src/app/(home)/strategy/[record_id]/: Form.tsx  page.tsx
src/app/api/auth/: route.ts
src/app/api/cf/create-item/: route.ts
src/app/api/cf/read-all-items/: route.ts
src/app/api/cf/read-item/: route.ts
src/app/api/cf/update-item/: route.ts
src/app/api/method/create-item/: route.ts
src/app/api/method/read-all-items/: route.ts
src/app/api/upload/: route.ts
src/app/cf/: page.tsx
src/app/cf/[record_id]/: page.tsx
src/app/pl/: page.tsx
src/app/pl/[record_id]/: page.tsx
src/app/report/: page.tsx
src/components/: Button.tsx  Card.tsx  FormParts.tsx  Modal.tsx  TabBar.tsx  Uploader.tsx
src/config/: constants.ts
src/hooks/: formData.ts
src/lib/: calc.ts  dynamodb.ts  request.ts  utils.ts  validate.ts
src/lib/dynamodb/: pl.ts
src/lib/supabase/: middleware.ts  storage.ts
src/scripts/: cf.csv  migrate.ts  pl.csv  transaction.csv
src/types/: type.ts
supabase/: config.toml  schema.md
supabase/migrations/: 20250825064103_migration.sql  20250828084820_storage_rls_policies.sql
(+14 files in other folders)
